examples/wp-ns/nginx-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dep
  namespace: wp-ns
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
       app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-container
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: wp-ns
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 80
