examples/wp-ns/wp-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-dep
  namespace: wp-ns
  labels:
    dep: wp
spec:
  replicas: 2
  selector:
    matchLabels:
      dep: wp
  template:
    metadata:
      name: wp-pod
      labels:
        dep: wp
    spec:
      containers:
         - name: wp-container
           image: wordpress
           ports:
             - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: wp-service
  namespace: wp-ns
spec:
  selector:
    dep: wp
  ports:
   - port: 80
     targetPort: 80
     protocol: TCP
